--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "Makefile*": "makefile",
         "iostream": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "cmath": "cpp",
+        "ostream": "cpp",
+        "*.tcc": "cpp"
     }
 }
